# cooperative_transportation_4ws_description

./: CMakeLists.txt  package.xml  ros_controller_check.txt
config/: controller.yaml
data/: GAZEBO.csv  data_log_20250914_123714.csv  data_log_20250921_143105.csv  data_log_20250925_115520.csv  data_log_20250925_121542.csv  data_log_20250926_222441.csv  data_log_20250926_223045.csv  gazebo_log_20251017_173913.csv  gazebo_log_20251017_174135.csv  gazebo_log_20251017_174331.csv  gazebo_log_y-3.csv
include/: DynamicsCalc.hpp  callback.hpp  callback_ct.hpp  csvLogger.hpp  csvLogger_ct.hpp  differential_equations.hpp  getInputValue.hpp  global.hpp  initial.hpp  mathFunc.h  vehicle.hpp  vehicle_ct.hpp  wheel_kinematics.hpp
launch/: controller.launch  display.launch  gazebo.launch  gazebo_rviz.launch
meshes/: base_link.stl  hinge.stl  linkage_point1_1.stl  linkage_point2_1.stl  linkage_point3_1.stl  new_hinge_10.stl  new_hinge_3.stl  new_hinge_4.stl  new_hinge_6.stl  new_hinge_8.stl  new_hinge_9.stl  new_wheel_1.stl  new_wheel_2.stl  new_wheel_4.stl  new_wheel_5.stl  new_wheel_7.stl  new_wheel_8.stl  new_wheel_9.stl  v1_body_1.stl  v1_front_1.stl  v1_front_left_hinge_1.stl  v1_front_left_wheel_1.stl  v1_front_right_hinge_1.stl  v1_front_right_joint_1.stl  v1_hinge_1.stl  v1_hinge_11.stl  v1_hinge_12.stl  v1_hinge_2.stl  v1_hinge_5.stl  v1_hinge_7.stl  v1_rear_1.stl  v1_rear_left_hinge_1.stl  v1_rear_left_wheel_1.stl  v1_rear_right_hinge_1.stl  v1_rear_right_wheel_1.stl  v1_sliding_machine_1.stl  v1_wheel_10.stl  v1_wheel_11.stl  v1_wheel_12.stl  v1_wheel_3.stl  (+26 more)
rviz/: test.rviz
src/: Bezier.cpp  DynamicsCalc.cpp  callback.cpp  callback_ct.cpp  cooperative_transportation_kinematics.cpp  cooperative_transportation_velocity.cpp  csvLogger.cpp  differential_equations.cpp  formclosure_test.cpp  getInputValue.cpp  initial.cpp  main.cpp  mathFunc.cpp  vehicle.cpp  vehicle_ct.cpp
urdf/: cooperative_transportation_4ws.gazebo  cooperative_transportation_4ws.trans  cooperative_transportation_4ws.xacro  materials.material  materials.xacro
